# CustomBootSplash-Image-Changer

./: CMakeLists.txt  README.md
src/: debugScreen.h  main.c
